RESOLVED FIXED 133111
REGRESSION: [CSS Regions] Content flowed directly into the flow thread that ends up in the second region is not properly repainted
https://bugs.webkit.org/show_bug.cgi?id=133111
Summary REGRESSION: [CSS Regions] Content flowed directly into the flow thread that e...
Radu Stavila
Reported 2014-05-20 01:44:26 PDT
See attached test-case.
Attachments
Repro (907 bytes, text/html)
2014-05-20 01:55 PDT, Radu Stavila
no flags
Patch (6.21 KB, patch)
2014-05-20 08:10 PDT, Radu Stavila
no flags
Radu Stavila
Comment 1 2014-05-20 01:55:39 PDT
Radu Stavila
Comment 2 2014-05-20 08:10:59 PDT
Dave Hyatt
Comment 3 2014-05-20 10:03:01 PDT
Comment on attachment 231769 [details] Patch r=me
WebKit Commit Bot
Comment 4 2014-05-20 10:38:38 PDT
Comment on attachment 231769 [details] Patch Clearing flags on attachment: 231769 Committed r169120: <http://trac.webkit.org/changeset/169120>
WebKit Commit Bot
Comment 5 2014-05-20 10:38:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.